2009-08-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* log-view.el (log-view-mode-map): Remove `q' binding, and unreliable
	cvs-mode-map parent hack.
	(log-view-mode): Derive from special-mode.

	* linum.el (linum-mode): window-size-change-functions is redundant.
	Adapt to new window-configuration-change-hook behavior.
	(linum-after-size, linum-after-config): Remove.

	* imenu.el (imenu-example--name-and-position)
	(imenu-example--lisp-extract-index-name)
	(imenu-example--create-lisp-index, imenu-example--create-c-index):
	Mark as obsolete.

	* progmodes/prolog.el (inferior-prolog-error-regexp-alist): New var.
	(inferior-prolog-mode): Use it.
	(inferior-prolog-load-file): Reset list of errors.

2009-08-19  ARISAWA Akihiro  <ari@mbf.ocn.ne.jp>  (tiny change)

	* language/tibetan.el ("Tibetan"): Fix sample-text entry.

	* language/tai-viet.el ("TaiViet"): Fix sample-text entry.

2009-08-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (top): Apply `dbus-init-bus' only if the session bus
	is running already.

2009-08-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (listify-key-sequence-1): Use normal syntax since those
	integers are nowadays always represented by the same (positive) number
	on all platforms.
	(read-key-empty-map): New const.
	(read-key-delay): New var.
	(read-key): New function.
	(force-mode-line-update): Use with-current-buffer.
	(locate-user-emacs-file): Don't forget to abbreviate the file name.
	(start-process-shell-command, start-file-process-shell-command):
	Discourage the use of command-args.

2009-08-19  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/authors.el (authors-fixed-entries): Remove cvtmail.

2009-08-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (choose-completion-string): Don't rely on
	minibuffer-completing-file-name and ad-hoc checks to decide whether
	to continue completion or not.

	* minibuffer.el (minibuffer-hide-completions): New function.
	(completion--do-completion): Use it.